<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.ontotext.graphdb.plugins</groupId>
	<artifactId>geosparql-plugin</artifactId>
	<version>3.0.5</version>

	<properties>
		<graphdb.version>10.2.1</graphdb.version>
        <gt.version>27.5</gt.version>
		<lucene.version>8.10.1</lucene.version>
		<dependency.check.version>8.2.1</dependency.check.version>

		<internal.repo>https://maven.ontotext.com/content/repositories/owlim-releases</internal.repo>
		<snapshots.repo>https://maven.ontotext.com/content/repositories/owlim-snapshots</snapshots.repo>

		<!-- Empty defaults to keep things happy, argLine can be overridden on command line,
			extraArgLine may be overridden by one of the profiles. -->
		<argLine />
		<extraArgLine />
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>11</source>
					<target>11</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.5.3</version>
				<configuration>
					<tagNameFormat>@{project.version}</tagNameFormat>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.1.1</version>
				<configuration>
					<finalName>${project.artifactId}</finalName>
					<descriptors>
						<descriptor>graphdb-plugin.xml</descriptor>
					</descriptors>
				</configuration>
				<executions>
					<execution>
						<id>package-plugin</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M3</version>
				<configuration>
					<argLine>${argLine} ${extraArgLine}</argLine>
					<systemPropertyVariables>
						<graphdb.stats.default>disabled</graphdb.stats.default>
					</systemPropertyVariables>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.1.1</version>
			</plugin>

			<plugin>
				<groupId>org.owasp</groupId>
				<artifactId>dependency-check-maven</artifactId>
				<version>${dependency.check.version}</version>
				<configuration>
					<failBuildOnCVSS>7</failBuildOnCVSS>
					<skipProvidedScope>true</skipProvidedScope>
				</configuration>
				<executions>
					<execution>
						<phase>none</phase>
						<goals>
							<goal>aggregate</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<!-- Repository needed for GraphDB artifacts and some support artifacts -->
		<repository>
			<id>owlim-releases</id>
			<name>GraphDB Releases</name>
			<url>https://maven.ontotext.com/repository/owlim-releases</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
        <repository>
            <id>osgeo</id>
            <url>https://repo.osgeo.org/repository/release/</url>
        </repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>com.ontotext.graphdb</groupId>
			<artifactId>graphdb-sdk</artifactId>
			<version>${graphdb.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.12.0</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>net.sf.trove4j</groupId>
			<artifactId>trove4j</artifactId>
			<version>2.0.2</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-core</artifactId>
			<version>${lucene.version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-backward-codecs</artifactId>
			<version>${lucene.version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-spatial-extras</artifactId>
			<version>${lucene.version}</version>
		</dependency>

		<!-- Geometric & Geodetic stuff for GeoSPARQL implementation: -->
		<dependency>
			<groupId>org.locationtech.jts</groupId>
			<artifactId>jts-core</artifactId>
			<version>1.16.1</version>
		</dependency>

		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-referencing</artifactId>
			<version>${gt.version}</version>
		</dependency>

		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-epsg-extension</artifactId>
			<version>${gt.version}</version>
		</dependency>

		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-epsg-hsql</artifactId>
			<version>${gt.version}</version>
		</dependency>

		<dependency>
			<groupId>io.github.soc</groupId>
			<artifactId>ogc-tools-gml-jts</artifactId>
			<version>1.1.90</version>
		</dependency>

		<!-- For Geotoolkit's cache. We need to have it outside the plugin classloader so it must be packaged in the dist -->
		<dependency>
			<groupId>org.hsqldb</groupId>
			<artifactId>hsqldb</artifactId>
			<version>2.7.1</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.6</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.ontotext.graphdb</groupId>
			<artifactId>graphdb-tests-base</artifactId>
			<version>${graphdb.version}</version>
			<scope>test</scope>
			<exclusions>
				<!-- These are from the FTS functionality and should not be included as they break the plugins -->
				<exclusion>
					<groupId>org.apache.lucene</groupId>
					<artifactId>*</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>com.ontotext.graphdb</groupId>
			<artifactId>graphdb-runtime</artifactId>
			<version>${graphdb.version}</version>
			<scope>test</scope>
			<exclusions>
				<!-- These are from the FTS functionality and should not be included as they break the plugins -->
				<exclusion>
					<groupId>org.apache.lucene</groupId>
					<artifactId>*</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<profiles>
		<profile>
			<id>doclint-java8-disable</id>
			<activation>
				<jdk>[1.8,)</jdk>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<configuration>
							<additionalOptions>-Xdoclint:none</additionalOptions>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
        <profile>
            <!--
                If test.java is set then we run the tests with a different Java distribution.
                The property test.java must point to a Java home directory.
                The test Java is assumed to be version 9+ so the appropriate arguments are added to surefire.
             -->
            <id>test-java</id>
            <activation>
                <property>
                    <name>test.java</name>
                </property>
            </activation>
            <properties>
                <extraArgLine>--add-exports jdk.management.agent/jdk.internal.agent=ALL-UNNAMED</extraArgLine>
            </properties>
            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-surefire-plugin</artifactId>

                            <configuration>
                                <jvm>${test.java}/bin/java</jvm>
                            </configuration>
                        </plugin>

                    </plugins>
                </pluginManagement>
            </build>
        </profile>
		<profile>
			<!-- Adds Java 9+ -add-exports option to surefire if building on Java 9+ -->
			<id>java9plus-build</id>
			<activation>
				<jdk>[9,)</jdk>
			</activation>
			<properties>
				<extraArgLine>--add-exports jdk.management.agent/jdk.internal.agent=ALL-UNNAMED</extraArgLine>
			</properties>
		</profile>
	</profiles>

	<distributionManagement>
		<repository>
			<id>internal</id>
			<name>GraphDB Releases repository</name>
			<url>${internal.repo}</url>
		</repository>
		<snapshotRepository>
			<id>snapshots</id>
			<name>GraphDB Snapshots repository</name>
			<url>${snapshots.repo}</url>
		</snapshotRepository>
	</distributionManagement>

	<scm>
		<connection>scm:git:git@github.com:Ontotext-AD/graphdb-geosparql-plugin.git</connection>
		<developerConnection>scm:git:git@github.com:Ontotext-AD/graphdb-geosparql-plugin.git</developerConnection>
		<url>https://github.com/Ontotext-AD/graphdb-geosparql-plugin</url>
		<tag>3.0.5</tag>
	</scm>
</project>
